fixed overflow issues

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -104,5 +104,4 @@ ul {
   position: absolute;
   background: $yellow;
   width: 100vw;
-  height: 100vh;
 }
