--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,13 +10,13 @@ $back: -1;
 .hide {
   opacity: 0 !important;
   transition: all 0.5s ease;
-  z-index: -1;
+  z-index: $back !important;
 }
 
 .show {
   opacity: 1;
   transition: all 0.5s ease;
-  z-index: 1;
+  z-index: $front !important;
 }
 
 .remove {
